assets/css/home.css
#home {
    background-image: url('/assets/imgs/Rectangle\ 15.png');
    height: 100dvh;
    background-size: cover;
    background-position: 60% center;
}

#home header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px 50px;
    height: 100px;
}

#home header img {
    width: 100px;
}

#home header .menu {
    display: flex;
    flex-direction: column;
    padding: 20px;
    position: absolute;
    top: 0;
    left: 100%;
    z-index: 10;
    height: 100dvh;
    width: 100vw;
    background-color: var(--primary-color);
    color: white;
    transition: transform 0.5s;
}

#home header nav {
    border-top: 1px solid white;
    margin-top: 20px;
}

#home header ul {
    list-style: none;
}

#home header ul li {
    margin: 10px 0;
}

#home header ul li a {
    color: white;
    text-decoration: none;
    font-family: 'Poppins', sans-serif;
    font-size: 20px;
}

#home article {
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: calc(100dvh - 100px);
    padding: 0 30px;
    gap: 20px;
}

#home article h1 {
    width: 50%;
}

#home article p {
    width: 50%;
}

@media screen and (min-width: 1040px) {
    #home {
        background-position: center;
    }

    #home header {
        padding: 20px 80px;
    }

    #home header #hamburguer {
        display: none;
    }

    #home header .menu #close {
        display: none;
    }

    #home header .menu {
        display: flex;
        background-color: transparent;
        transform: translateX(calc(-100% - 80px));
        align-items: end;
        transition: none;
    }

    #home header .menu nav ul li a {
        color: black;
    }

    #home header .menu nav ul {
        border: none;
        margin-top: 0;
        display: flex;
        gap: 20px;
    }

    #home header nav {
        border: none;
        margin-top: 0;
        display: flex;
    }

    #home article {
        padding: 0 80px;
    }

    #home article h1 {
        width: 40%;
    }

    #home article p {
        width: 40%;
    }
    
}

